--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #B2B2B2;
 	}
 	.ibox{
 		border: 1px solid black;
@@ -49,6 +50,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #B2B2B2;
 
 	}
 	.ibox{
@@ -87,6 +89,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #B2B2B2;
 	}
 	.ibox{
 		border: 1px solid black;
