--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ h1{
 		font-weight: bold;
 	}
 	#ablock{
-		background-color: blue;
+		background-color: #D59898;
 	}
 	#bblock{
-		background-color: green;
+		background-color: #999999;
 	}
 	#cblock{
-		background-color: red;
+		background-color: #E5D198;
 	}
 }
 
@@ -67,13 +67,13 @@ h1{
 		width: 728px;
 	}
 	#ablock{
-		background-color: blue;
+		background-color: #D59898;
 	}
 	#bblock{
-		background-color: green;
+		background-color: #999999;
 	}
 	#cblock{
-		background-color: red;
+		background-color: #E5D198;
 	}
 }
 
@@ -102,12 +102,12 @@ h1{
 		font-weight: bold;
 	}
 	#ablock{
-		background-color: blue;
+		background-color: #D59898;
 	}
 	#bblock{
-		background-color: green;
+		background-color: #999999;
 	}
 	#cblock{
-		background-color: red;
+		background-color: #E5D198;
 	}
 }
