--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1{
 		background-color: #D59898;
 	}
 	#bblock{
-		background-color: #999999;
+		background-color: red;
 	}
 	#cblock{
 		background-color: #E5D198;
@@ -70,7 +70,7 @@ h1{
 		background-color: #D59898;
 	}
 	#bblock{
-		background-color: #999999;
+		background-color: red;
 	}
 	#cblock{
 		background-color: #E5D198;
@@ -105,7 +105,7 @@ h1{
 		background-color: #D59898;
 	}
 	#bblock{
-		background-color: #999999;
+		background-color: red;
 	}
 	#cblock{
 		background-color: #E5D198;
