--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #999999;
 	}
 	.ibox{
 		border: 1px solid black;
@@ -50,6 +51,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #999999;
 
 	}
 	.ibox{
@@ -88,6 +90,7 @@ h1{
 		padding-left: 10px;
 		padding-top: 0px;
 		margin: 1%;
+		background-color: #999999;
 	}
 	.ibox{
 		border: 1px solid black;
